# serenity_discord_bot_test

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
macro_util/: Cargo.toml  Makefile.toml
macro_util/src/: attributes.rs  lib.rs  structures.rs  util.rs
src/: app_cmd.rs  commands.rs  handlers.rs  lib.rs  main.rs
src/app_cmd/: example.rs
src/commands/: owner.rs
